--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ var userInput = document.getElementById("userInput").value='';
 test();}
 var time = n1-n;
 if(n1<n)
-arr[i] = 60-time + '<br/>';
+arr[i] = 60+time + '<br/>';
 else
 arr[i] = time +'<br/>';
 i++;
